# anima-v-0

./: .env.anima  .env.assets  .env.production  .gitignore  .ic-assets.json5  .npmrc  .yarnrc.yml  Cargo.toml  README.md  build-wasm.sh  canister_ids.json  chmod.sh  cleanup-duplicates.sh  cleanup-unused.sh  cleanup.sh  cleanup.txt  deploy-full.sh  deploy-mainnet.sh  deploy-optimized.sh  dfx.json  fix.json  healthcheck.ts  index.html  init-canisters.sh  make-cleanup-executable.sh  make-scripts-executable.sh  output.txt  package.json  quick-deploy.sh  reset-deploy.sh  setup.sh  tailwind.config.js  tree_output.txt  tsconfig.json  verify-deployment.sh  vite.config.ts
backup_old/: icp-ledger.ts
backup_old/hooks/: useICPLedger.ts
backup_old/services/: treasury.service.ts  wallet.service.ts
candid/: assetstorage.did
public/: web.config
src/: App.tsx  anima.did  backup-removed-files.txt  example.txt  ic-init.ts  ic-manifest.ts  ii-config.ts  index.css  init.ts  lib.did  lib.rs  main.tsx  polyfills.ts  router.jsx  router.tsx  routes.tsx  shims.js  styles.css  vite-env.d.ts
src/__tests__/: setup.ts
src/actions/: handlers.rs  mod.rs  traits.rs  user.rs
src/admin/: admin.rs  metrics.rs  mod.rs
src/ai/: config.rs  emotional_state.rs  mod.rs  openai_client.rs  promptTemplates.ts  prompt_templates.rs  types.rs
src/analytics/: AlertsMonitor.ts  CanisterMonitor.ts  CyclesMonitor.ts  NetworkMonitor.ts  SecurityMonitor.ts  SystemHealthMonitor.ts  TransactionMonitor.ts  UserAnalyticsMonitor.ts  consciousness_metrics.rs  metrics_engine.rs  mod.rs  quantum_metrics.rs
(+672 files in other folders)
