[package]
name = "anima"
version = "0.1.0"
edition = "2021"

[dependencies]
candid = { version = "0.9.11", features = ["parser"] }
ic-cdk = "0.11.6"
ic-cdk-timers = "0.5.1"
ic-cdk-macros = "0.8.1"
ic-stable-structures = "0.5.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8"
getrandom = { version = "0.2", features = ["custom"] }
num-traits = "0.2"
thiserror = "1.0"
ic-metrics-encoder = "1.1"
futures = "0.3"
sha2 = "0.10.8"
hex = "0.4.3"

[lib]
crate-type = ["cdylib"]

[profile.release]
lto = true
opt-level = 'z'
codegen-units = 1
panic = 'abort'
strip = true
overflow-checks = true
debug = false